--- a/_pages/research.html
+++ b/_pages/research.html
@@ -1,8 +1,36 @@
 ---
+layout: archive
+title: "research"
 permalink: /research/
-title: "Biography"
 author_profile: true
 ---
 
+{% if site.author.googlescholar %}
+  <div class="wordwrap">You can also find my articles on <a href="{{site.author.googlescholar}}">my Google Scholar profile</a>.</div>
+{% endif %}
 
-I'm now a PhD student from School of Economics, Zhejiang University. My research interest includes a range of macroeconomic questions related to monetary policy, fiscal policy, and rational inattention. I am very fortunate to be advised by [Prof. Jieran Wu](https://sites.google.com/site/jieranwu/).
+{% include base_path %}
+
+<!-- New style rendering if publication categories are defined -->
+{% if site.publication_category %}
+  {% for category in site.publication_category  %}
+    {% assign title_shown = false %}
+    {% for post in site.publications reversed %}
+      {% if post.category != category[0] %}
+        {% continue %}
+      {% endif %}
+      {% unless title_shown %}
+        <h2>{{ category[1].title }}</h2><hr />
+        {% assign title_shown = true %}
+      {% endunless %}
+      {% include archive-single.html %}
+    {% endfor %}
+  {% endfor %}
+{% else %}
+  {% for post in site.publications reversed %}
+    {% include archive-single.html %}
+  {% endfor %}
+{% endif %}
+
+
+
